tests/paczka1/fuzzy1/14340798.err
Error in line 4: BWO A337 21,8
Error in line 22: S711 S711 45,17
Error in line 35: QdNs A773 63,1
Error in line 39: BWO S576 12,0
